--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<input type="number" class="input" disabled>
+<button class="increase">+</button>
+<button class="decrease">-</button>
 </body>
 <script src="app.js">
 </script>
